LinKreta_POC_Repository/force-app/main/default/objects/EXPERTIESMASTER__x/EXPERTIESMASTER__x.object-meta.xml
<CustomObject>
    <description>EXPERTIESMASTERs</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>EXPERTIESMASTERs</externalName>
    <label>EXPERTIESMASTER</label>
    <pluralLabel>EXPERTIESMASTERs</pluralLabel>
</CustomObject>