LinKreta_POC_Repository/force-app/main/default/objects/EXPERTIESMASTER__x/fields/LEADER1__c.field-meta.xml
<CustomField>
    <fullName>LEADER1__c</fullName>
    <description>LEADER1</description>
    <externalDeveloperName>LEADER1</externalDeveloperName>
    <label>LEADER1</label>
    <length>8</length>
    <type>Text</type>
</CustomField>