LinKreta_POC_Repository/force-app/main/default/objects/EXPERTIESMASTER__x/fields/LEADER2__c.field-meta.xml
<CustomField>
    <fullName>LEADER2__c</fullName>
    <description>LEADER2</description>
    <externalDeveloperName>LEADER2</externalDeveloperName>
    <label>LEADER2</label>
    <length>8</length>
    <type>Text</type>
</CustomField>