LinKreta_POC_Repository/force-app/main/default/objects/EXPERTIESMASTER__x/fields/LEADER3__c.field-meta.xml
<CustomField>
    <fullName>LEADER3__c</fullName>
    <description>LEADER3</description>
    <externalDeveloperName>LEADER3</externalDeveloperName>
    <label>LEADER3</label>
    <length>8</length>
    <type>Text</type>
</CustomField>