LinKreta_POC_Repository/force-app/main/default/objects/EXPERTIESMASTER__x/fields/SERVICE_NAME__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_NAME__c</fullName>
    <description>SERVICE_NAME</description>
    <externalDeveloperName>SERVICE_NAME</externalDeveloperName>
    <label>SERVICE_NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>